fix scrollbar theme dark

--- a/assets/css/_base/_public.scss
+++ b/assets/css/_base/_public.scss
@@ -28,7 +28,12 @@
   }
 }
 
+
 /*! Public style */
+:root {
+  color-scheme: dark;
+}
+
 * {
   -webkit-margin-before: 0;
   -webkit-margin-after: 0;
